<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llNetworkFail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_shadow"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/bg_nointernet_connection"
                tools:ignore="VectorDrawableCompat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:fontFamily="@string/font_family_black"
                android:gravity="center"
                android:text="@string/lbl_network_failure_title"
                android:textColor="@color/network_title"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/font_family_regular"
                android:gravity="center"
                android:text="@string/lbl_network_failure_sub_title"
                android:textColor="@color/network_sub_title"
                android:textSize="15sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            style="@style/AppGreenBorderButton"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@string/font_family_medium"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical"
            android:text="@string/lbl_retry" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>